--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,112 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <title>Assigment RevoU 1</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <header>
+      <div>
+        <img
+          class="logo"
+          src="https://images.moqups.com/repo/9PZZyyGjJ8/p_Tf3tCodSPL/_clipboard/f5dWWU7sxe.svg?Expires=1683783741&Key-Pair-Id=K1TPUF1X6HKIYU&Signature=R3EfE4cPVJNDQLZvZTmr60AQxFPEyfuk2YkHsfMo6Cizzq5XgLzAqIhnGiUNstNG9QB6OPd8eO6flOk0wDli3UYDF92S8Alg6M2N10YXqdx6YogdHGt4mjNlYL9zWBBcXjbcCwHJeVMMwZOFq-EiW7ks2e2-ACbgFlGXFlETlr320grM-HmRsvSgCnXM2J016DosdfPzi3J2HIuWffaV8SAJPDIP42K5eznf8V7v7ctSnZps9JewYcborUsP-lK82lZsyvoytgUCZ9q83MrcPBJQL6kzLw~FbcWd0Cp0pqCFVlxtDFGHTP8SNN8Uu6HPKBzDJhZHufR4CHG4uzfqww__"
+          alt="moqups"
+        />
+      </div>
+      <div class="navbar">
+        <button><a href="#home">Home</a></button>
+        <button>Our Package</button>
+        <button>Call Us</button>
+        <!-- <table class="navbar">
+          <tr>
+            <td><a href="#home">Home</a></td>
+            <td>Our Package</td>
+            <td>Call Us</td>
+          </tr>
+        </table> -->
+      </div>
+    </header>
+
+    <main>
+      <section class="home" id="home">
+        <div class="banner">
+          <h1>
+            Top Rated E-Groceries Shop in <br />
+            Indonesia
+          </h1>
+          <p>Every Day with best ingredients</p>
+        </div>
+      </section>
+      <section class="content">
+        <div class="wrap">
+          <div>
+            <div>
+              <img class="photo" src="assets/images/page1.png" alt="photos" />
+            </div>
+            <div>
+              <i>"setiap hari beli sayur buah yang fresh disini"</i>
+            </div>
+            <div class="account">
+              <div class="account-circle">
+                <p>1</p>
+              </div>
+              <div class="account-name">
+                <h4>
+                  Florence Hughes
+                </h4>
+                <i>Ibu Rumah Tangga, 28</i>
+              </div>
+            </div>
+            <div class="content-describe">
+              <h4>
+                Use this space to provide users with more information <br> about your offer. Consider it a follow-up to your headline <br> and explain the benefits of your servie or product
+              </h4>
+            </div>
+          </div>
+          <div>
+            <div class="form">
+              <h3>Contact Us</h3>
+              <p>
+                Sales akan menghubungi anda 1x24 <br />
+                Jam setelah data kami terima.
+              </p>
+              <br /><br />
+              <form action="">
+                <h5>Your Name:</h5>
+                <input type="text" placeholder="First and last name" />
+                <br />
+                <h5>Email Addres:</h5>
+                <input type="text" placeholder="example@email.com" />
+                <br />
+                <h5>What are you interested in?</h5>
+                <select placeholder="Select option">
+                  <option>Banana</option>
+                  <option>Aplle</option>
+                </select>
+              </form>
+                <br /><br />
+                <button class="button"><strong>SEND</strong></button>
+              </form>
+            </div>
+            <br /><br />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
+
+  <footer class="footer">
+    <div>
+      <img
+        class="logo-footer"
+        src="https://images.moqups.com/repo/9PZZyyGjJ8/p_Tf3tCodSPL/_clipboard/f5dWWU7sxe.svg?Expires=1683783741&Key-Pair-Id=K1TPUF1X6HKIYU&Signature=R3EfE4cPVJNDQLZvZTmr60AQxFPEyfuk2YkHsfMo6Cizzq5XgLzAqIhnGiUNstNG9QB6OPd8eO6flOk0wDli3UYDF92S8Alg6M2N10YXqdx6YogdHGt4mjNlYL9zWBBcXjbcCwHJeVMMwZOFq-EiW7ks2e2-ACbgFlGXFlETlr320grM-HmRsvSgCnXM2J016DosdfPzi3J2HIuWffaV8SAJPDIP42K5eznf8V7v7ctSnZps9JewYcborUsP-lK82lZsyvoytgUCZ9q83MrcPBJQL6kzLw~FbcWd0Cp0pqCFVlxtDFGHTP8SNN8Uu6HPKBzDJhZHufR4CHG4uzfqww__"
+        alt="moqups"
+      />
+    </div>
+    <div class="footer-text">
+      <p>Terms of Service Privacy Policy</p>
+      <p>© 2019 Moqups</p>
+    </div>
+  </footer>
 </html>
