--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/a304e4815d.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="https://assets-global.website-files.com/61af164800e38c4f53c60b4e/61af164800e38c11efc60b6d_RevoU.svg" type="image/x-icon">
     <title>Assigment RevoU 1</title>
   </head>
   <body>
@@ -21,13 +22,6 @@
         <button><a href="#home">Home</a></button>
         <button>Our Package</button>
         <button>Call Us</button>
-        <!-- <table class="navbar">
-          <tr>
-            <td><a href="#home">Home</a></td>
-            <td>Our Package</td>
-            <td>Call Us</td>
-          </tr>
-        </table> -->
       </div>
     </header>
 
@@ -47,12 +41,12 @@
             <div>
               <img class="photo" src="assets/images/page1.png" alt="photos" />
             </div>
-            <div>
+            <div class="photo-desc">
               <i>"setiap hari beli sayur buah yang fresh disini"</i>
             </div>
             <div class="account">
               <div class="account-circle">
-                <p>1</p>
+                <i class="fa-regular fa-user" style="color: rgb(59, 71, 84);"></i>
               </div>
               <div class="account-name">
                 <h4>
@@ -61,6 +55,7 @@
                 <i>Ibu Rumah Tangga, 28</i>
               </div>
             </div>
+            <hr>
             <div class="content-describe">
               <h4>
                 Use this space to provide users with more information <br> about your offer. Consider it a follow-up to your headline <br> and explain the benefits of your servie or product
