fix icon profile

--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="account">
               <div class="account-circle">
-                <i class="fa-regular fa-user" style="color: rgb(59, 71, 84);"></i>
+                <i class="fa-regular fa-user" style="color: #a8b7c7"></i>
               </div>
               <div class="account-name">
                 <h4>
