fix main content

--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="navbar">
         <button><a href="#home">Home</a></button>
-        <button>Our Package</button>
+        <button><a href="#package">Our Package</a></button>
         <button>Call Us</button>
       </div>
     </header>
@@ -61,6 +61,31 @@
                 Use this space to provide users with more information <br> about your offer. Consider it a follow-up to your headline <br> and explain the benefits of your servie or product
               </h4>
             </div>
+            <div class="content-list">
+              <div class="list">
+                <p>1</p>
+              </div>
+              <div class="desc-list">
+                <p>Your first feature, written in the form of a <br>
+                benefits statement.</p>
+              </div>
+            </div>
+            <div class="content-list">
+              <div class="list">
+                <p>2</p>
+              </div>
+              <div class="desc-list">
+                <p>Your secound feature, written in the form <br> of a benefits statement.</p>
+              </div>
+            </div>
+            <div class="content-list">
+              <div class="list">
+                <p>3</p>
+              </div>
+              <div class="desc-list">
+                <p>Your third feature, written in the form of <br> a benefits statement.</p>
+              </div>
+            </div>
           </div>
           <div>
             <div class="form">
@@ -89,6 +114,13 @@
             </div>
             <br /><br />
           </div>
+        </div>
+      </section>
+      <section class="main-package" id="package">
+        <div class="package">
+          <h1>
+            Our Package
+          </h1>
         </div>
       </section>
     </main>
