fix Our Package pages

--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
       <div class="navbar">
         <button><a href="#home">Home</a></button>
         <button><a href="#package">Our Package</a></button>
-        <button>Call Us</button>
+        <button><a href="#call">Call Us</a></button>
       </div>
     </header>
 
@@ -121,6 +121,116 @@
           <h1>
             Our Package
           </h1>
+        </div>
+        <div class="package-container">
+          <div class="package-box">
+            <div class="box-warp">
+              <div class="list-box">
+                <i class="fa-sharp fa-regular fa-lightbulb"></i>
+              </div>
+              <div class="box-content">
+                <h3>
+                  Fresh Vegetable
+                </h3>
+                <p>
+                  Sayuran segar langsung dari <br> sumber pertanian terbaik
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="package-box">
+            <div class="box-warp">
+              <div class="list-box">
+                <i class="fa-sharp fa-regular fa-lightbulb"></i>
+              </div>
+              <div class="box-content">
+                <h3>
+                  Fresh Fruit
+                </h3>
+                <p>
+                  Buah dengan kualitas terbaik <br> dari local atau import dan <br> harga yang menarik
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="package-box">
+            <div class="box-warp">
+              <div class="list-box">
+                <i class="fa-sharp fa-regular fa-lightbulb"></i>
+              </div>
+              <div class="box-content">
+                <h3>
+                  Instant Delivery
+                </h3>
+                <p>
+                  Di kirim instan oleh kurir <br> yang telah d training <br> dengan SOP untuk menjaga <br> kondisi belanja kamu 
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr class="package-line">
+        <div class="package-container">
+          <div class="package-box">
+            <div class="box-warp">
+              <div class="list-box">
+                <i class="fa-sharp fa-solid fa-star"></i>
+              </div>
+              <div class="box-content">
+                <h3>
+                  Kitchen Ingredient
+                </h3>
+                <p>
+                  Bumbu dapur lengkap untuk <br> keperluan memasak kamu 
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="package-box">
+            <div class="box-warp">
+              <div class="list-box">
+                <i class="fa-sharp fa-solid fa-star"></i>
+              </div>
+              <div class="box-content">
+                <h3>
+                  Kitchen Set
+                </h3>
+                <p>
+                  Segala jenis alat masak untuk <br> membantu kamu memasak 
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="package-box">
+            <div class="box-warp">
+              <div class="list-box">
+                <i class="fa-sharp fa-solid fa-star"></i>
+              </div>
+              <div class="box-content">
+                <h3>
+                  Bunding Set
+                </h3>
+                <p>
+                  Bingung masak apa? sudah <br> tersedia paket untuk kamu <br> masak di dapur mu
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="call-head" id="call">
+        <div class="call-content">
+          <h1>
+            Your Closing Argument Headline
+          </h1>
+          <p>
+            Suspendise egestas rhoncus urna in bibendum. Donec urna neque, euismod sed <br> justo quis, convalis tincidunt risus. Phasellus fringilla odio vel erat fringilla.
+          </p>
+        </div>
+        <div>
+          <button class="call-button">
+            CALL TO ACTION
+          </button>
         </div>
       </section>
     </main>
