--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             Suspendise egestas rhoncus urna in bibendum. Donec urna neque, euismod sed <br> justo quis, convalis tincidunt risus. Phasellus fringilla odio vel erat fringilla.
           </p>
         </div>
-        <div>
+        <div class="div-btn">
           <button class="call-button">
             CALL TO ACTION
           </button>
