--- a/index.html
+++ b/index.html
@@ -272,12 +272,14 @@
       <img
         class="logo-footer"
         src="https://images.moqups.com/repo/9PZZyyGjJ8/p_Tf3tCodSPL/_clipboard/f5dWWU7sxe.svg?Expires=1683783741&Key-Pair-Id=K1TPUF1X6HKIYU&Signature=R3EfE4cPVJNDQLZvZTmr60AQxFPEyfuk2YkHsfMo6Cizzq5XgLzAqIhnGiUNstNG9QB6OPd8eO6flOk0wDli3UYDF92S8Alg6M2N10YXqdx6YogdHGt4mjNlYL9zWBBcXjbcCwHJeVMMwZOFq-EiW7ks2e2-ACbgFlGXFlETlr320grM-HmRsvSgCnXM2J016DosdfPzi3J2HIuWffaV8SAJPDIP42K5eznf8V7v7ctSnZps9JewYcborUsP-lK82lZsyvoytgUCZ9q83MrcPBJQL6kzLw~FbcWd0Cp0pqCFVlxtDFGHTP8SNN8Uu6HPKBzDJhZHufR4CHG4uzfqww__"
-        alt="moqups"
+        alt="moqups logo"
       />
     </div>
     <div class="footer-text">
-      <p>Terms of Service Privacy Policy</p>
-      <p>© 2019 Moqups</p>
+      <p>
+        Terms of Service Privacy Policy <br /><br />
+        © 2019 Moqups
+      </p>
     </div>
   </footer>
 </html>
