--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       src="https://kit.fontawesome.com/a304e4815d.js"
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
     <link
       rel="icon"
       href="https://assets-global.website-files.com/61af164800e38c4f53c60b4e/61af164800e38c11efc60b6d_RevoU.svg"
@@ -21,10 +20,7 @@
   <body>
     <header>
       <div class="logo">
-        <img
-          src="https://images.moqups.com/repo/9PZZyyGjJ8/p_Tf3tCodSPL/_clipboard/f5dWWU7sxe.svg?Expires=1683783741&Key-Pair-Id=K1TPUF1X6HKIYU&Signature=R3EfE4cPVJNDQLZvZTmr60AQxFPEyfuk2YkHsfMo6Cizzq5XgLzAqIhnGiUNstNG9QB6OPd8eO6flOk0wDli3UYDF92S8Alg6M2N10YXqdx6YogdHGt4mjNlYL9zWBBcXjbcCwHJeVMMwZOFq-EiW7ks2e2-ACbgFlGXFlETlr320grM-HmRsvSgCnXM2J016DosdfPzi3J2HIuWffaV8SAJPDIP42K5eznf8V7v7ctSnZps9JewYcborUsP-lK82lZsyvoytgUCZ9q83MrcPBJQL6kzLw~FbcWd0Cp0pqCFVlxtDFGHTP8SNN8Uu6HPKBzDJhZHufR4CHG4uzfqww__"
-          alt="moqups logo"
-        />
+        <img src="/assets/images/logo.png" alt="moqups logo" />
       </div>
       <div class="navbar">
         <button><a href="#home">Home</a></button>
@@ -45,8 +41,10 @@
       <section class="content">
         <div class="wrap">
           <div>
-            <div>
-              <img class="photo" src="assets/images/page1.png" alt="photos" />
+            <div class="slider">
+              <img src="assets/images/images1.jpg" alt="photos" />
+              <img src="assets/images/images2.jpg" alt="photos" />
+              <img src="assets/images/images3.jpg" alt="photos" />
             </div>
             <div class="photo-desc">
               <i>"setiap hari beli sayur buah yang fresh disini"</i>
@@ -135,8 +133,8 @@
                   <label>What are you interested in?</label>
                   <select id="option">
                     <option disabled selected value="">Select option</option>
-                    <option>Banana</option>
                     <option>Aplle</option>
+                    <option>Banana</option>
                   </select>
                 </div>
                 <br /><br />
@@ -265,13 +263,14 @@
         </div>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 
   <footer class="footer">
     <div>
       <img
         class="logo-footer"
-        src="https://images.moqups.com/repo/9PZZyyGjJ8/p_Tf3tCodSPL/_clipboard/f5dWWU7sxe.svg?Expires=1683783741&Key-Pair-Id=K1TPUF1X6HKIYU&Signature=R3EfE4cPVJNDQLZvZTmr60AQxFPEyfuk2YkHsfMo6Cizzq5XgLzAqIhnGiUNstNG9QB6OPd8eO6flOk0wDli3UYDF92S8Alg6M2N10YXqdx6YogdHGt4mjNlYL9zWBBcXjbcCwHJeVMMwZOFq-EiW7ks2e2-ACbgFlGXFlETlr320grM-HmRsvSgCnXM2J016DosdfPzi3J2HIuWffaV8SAJPDIP42K5eznf8V7v7ctSnZps9JewYcborUsP-lK82lZsyvoytgUCZ9q83MrcPBJQL6kzLw~FbcWd0Cp0pqCFVlxtDFGHTP8SNN8Uu6HPKBzDJhZHufR4CHG4uzfqww__"
+        src="/assets/images/logo.png"
         alt="moqups logo"
       />
     </div>
