--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="/assets/images/logo.png" alt="moqups logo" />
+        <img src="assets/images/logo.png" alt="moqups logo" />
       </div>
       <div class="navbar">
         <button><a href="#home">Home</a></button>
@@ -268,11 +268,7 @@
 
   <footer class="footer">
     <div>
-      <img
-        class="logo-footer"
-        src="/assets/images/logo.png"
-        alt="moqups logo"
-      />
+      <img class="logo-footer" src="assets/images/logo.png" alt="moqups logo" />
     </div>
     <div class="footer-text">
       <p>
